--- a/views/user/email_template/edit.twig
+++ b/views/user/email_template/edit.twig
@@ -81,18 +81,18 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script>
         unlayer.init({
-            version: 'stable',
+            version: '1.63.2',
             id: 'editor-container',
             displayMode: 'email',
         });
-
-console.log(unlayer.version);
         $(document).ready(function() {
             // Check if there's a template ID for edit mode
             var templateId = $('#template_id').val();
+
             if (templateId) {
                 loadTemplate(templateId);
             }
+            console.log(templateId);
         });
 
         // Function to load existing template in edit mode
@@ -106,7 +106,8 @@ console.log(unlayer.version);
                     var dataResult = JSON.parse(dataResult);
                     $('#template_name').val(dataResult[0].name);
 
-                    let design = JSON.parse(dataResult[0].design_json);
+                    // Parse the design JSON and convert all numeric strings to numbers
+                    let design = JSON.parse(atob(dataResult[0].design_json));
                     console.log(design);
                     unlayer.loadDesign(design);
                 },
@@ -117,50 +118,65 @@ console.log(unlayer.version);
             });
         }
 
-        // Save or update template on button click
-        $('#save-template').on('click', function () {
-            var templateName = $('#template_name').val();
-            var templateId = $('#template_id').val();
 
-            // Get Unlayer HTML content
-            unlayer.exportHtml(function (data) {
-                var htmlContent = data.html;
-                var jsonData = data.design;
 
-                // Determine if this is an update or a new template creation
-                var ajaxUrl = templateId ? `/user/email-template/edit/${templateId}` : '/user/email-template/create';
-                var ajaxMethod = templateId ? 'POST' : 'POST'; // Adjust if needed for PUT method
-
-                // Send AJAX request to save or update template
-                $.ajax({
-                    url: ajaxUrl,
-                    type: ajaxMethod,
-                    data: {
-                        name: templateName,
-                        content: htmlContent,
-                        design_json: jsonData
-                    },
-                    success: function (response1) {
-                        var response1 = JSON.parse(response1);
-                        console.log(response1['statusCode']);
-                        if (response1['statusCode'] == 1){
-                            toastr.success(response1['message']);
-                            setTimeout(function() {
-                                window.location.href = '/user/email-template/all';
-                            }, 2000);
-                        }else if(response1['statusCode'] == 2){
-                            toastr.error(response1['message']);
-                        }else if(response1['statusCode'] == 3){
-                            toastr.error(response1['message']);
-                        }else{
-                            toastr.error(response1['message']);
+                    // Save or update template on button click
+                    $('#save-template').on('click', function () {
+                        var templateName = $('#template_name').val();
+                        var templateId = $('#template_id').val();
+                            var ajaxUrl = templateId ? `/user/email-template/edit/${templateId}` : '/user/email-template/create';
+                            var ajaxMethod = templateId ? 'POST' : 'POST';
+                        unlayer.exportHtml(function (data) {
+                            var htmlContent = data.html;
+                            var jsonData = data.design;
+                            if (templateName != '' && htmlContent != '' && jsonData != '') {
+                    $.ajax({
+                        url: ajaxUrl,
+                        type: ajaxMethod,
+                        data: JSON.stringify({
+                            name: templateName,
+                            content: htmlContent,
+                            design_json: jsonData
+                        }),
+                        success: function (response1) {
+                            var response1 = JSON.parse(response1);
+                            console.log(response1['statusCode']);
+                            if (response1['statusCode'] == 1) {
+                                toastr.success(response1['message']);
+                                setTimeout(function () {
+                                    window.location.href = '/user/email-template/all';
+                                }, 2000);
+                            } else if (response1['statusCode'] == 2) {
+                                toastr.error(response1['message']);
+                            } else if (response1['statusCode'] == 3) {
+                                toastr.error(response1['message']);
+                            } else {
+                                toastr.error(response1['message']);
+                            }
+                        },
+                        error: function (error) {
+                            toastr.error('An error occurred while saving the template.');
                         }
-                    },
-                    error: function (error) {
-                        toastr.error('An error occurred while saving the template.');
-                    }
+                    });
+                            }else{
+                                toastr.error('Please Fill All Required Fields');
+                            }
                 });
+
             });
-        });
+        function convertNumericStringsToNumbers(obj) {
+            if (typeof obj === 'object' && obj !== null) {
+                for (let key in obj) {
+                    if (typeof obj[key] === 'object') {
+                        // Recursive call for nested objects or arrays
+                        convertNumericStringsToNumbers(obj[key]);
+                    } else if (typeof obj[key] === 'string' && !isNaN(obj[key])) {
+                        // Convert string to number if it represents a numeric value
+                        obj[key] = Number(obj[key]);
+                    }
+                }
+            }
+            return obj;
+        }
     </script>
 {% endblock %}
