--- a/views/auth/login.twig
+++ b/views/auth/login.twig
@@ -146,7 +146,7 @@
                             <a href="/login/google" class="btn btn-flex flex-center btn-light btn-lg w-100 mb-5">
                                 <img alt="Logo" src="{{ env.APP_URL }}assets/dash/assets/media/svg/brand-logos/google-icon.svg" class="h-20px me-3" />Continue with Google</a>
                             <a href="/login/microsoft" class="btn btn-flex flex-center btn-light btn-lg w-100 mb-5">
-                                <img alt="Logo" src="{{ env.APP_URL }}assets/dash/assets/media/svg/brand-logos/facebook-4.svg" class="h-20px me-3" />Continue with Facebook</a>
+                                <img alt="Logo" src="{{ env.APP_URL }}assets/dash/assets/media/svg/brand-logos/microsoft-5.svg" class="h-20px me-3" />Continue with Microsoft</a>
                             <a href="/login/apple" class="btn btn-flex flex-center btn-light btn-lg w-100">
                                 <img alt="Logo" src="{{ env.APP_URL }}assets/dash/assets/media/svg/brand-logos/apple-black.svg" class="h-20px me-3" />Continue with Apple</a>
                         </div>
