--- a/views/admin/profile/payment_method.twig
+++ b/views/admin/profile/payment_method.twig
@@ -148,6 +148,9 @@
                             <li class="nav-item mt-2">
                                 <a class="nav-link text-active-primary ms-0 me-10 py-5 active" href="/admin/profile/paymentMethod">Payment Method</a>
                             </li>
+                            <li class="nav-item mt-2">
+                                <a class="nav-link text-active-primary ms-0 me-10 py-5" href="/admin/profile/social-login-key">Social Login Keys</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
